--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-leaflet": "^4.2.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "transliterate": "^1.0.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.15",
