--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,10 +1,10 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "next/typescript",
     "plugin:prettier/recommended"
   ],
+  "plugins": ["@next/next"],
   "rules": {
-    "react/react-in-jsx-scope": "off" // Next.js не требует импортировать React
+    "react/react-in-jsx-scope": "off"
   }
 }
