--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fix": "next lint --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -35,14 +36,18 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.3.0",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^20",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.4",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "^15.3.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
