--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "next": "15.0.2",
